--- a/personal-web/src/Component/Header/HeaderNav.css
+++ b/personal-web/src/Component/Header/HeaderNav.css
@@ -1,17 +1,38 @@
 #fullH{
-    height: 3vh;
-    min-height: 20px;
+    height: 4.5vh;
+    min-height: 30px;
     width: 100vw;
-    min-width: 1400px;
-    background-color: aqua !important;
+    min-width: 1100px;
+    background-color: rgba(185, 187, 184, 0.7) !important;;
 }
 
 #list{
-    width: 60%;
-    margin: auto;
+    width: 77%;
+    margin-left: 23%;
+    height:100%;
 }
 
 .item_box{
     display: inline-block;
-    margin-right: 2%;
+    margin-right: 5.7%;
+    width: auto;
+    height: 100%;
+    font-size: 125%;
+    text-decoration: none;
+    font-weight: bolder;
+
+}
+
+.item {
+    position: relative;
+    margin-top: 5px;
+}
+
+a{
+    text-decoration: none;
+    color: black;
+}
+
+.item_box:hover{
+    background-color: rgb(159, 247, 122)
 }
