--- a/personal-web/src/Component/Header/HeaderNav.css
+++ b/personal-web/src/Component/Header/HeaderNav.css
@@ -2,7 +2,7 @@
     height: 4.5vh;
     min-height: 30px;
     width: 100vw;
-    min-width: 1100px;
+    min-width: 1400px;
     background-color: rgba(185, 187, 184, 0.7) !important;;
 }
 
@@ -14,8 +14,10 @@
 
 .item_box{
     display: inline-block;
-    margin-right: 5.7%;
+    margin-right: 2.7%;
     width: auto;
+    padding-left: 1%;
+    padding-right: 1%;
     height: 100%;
     font-size: 125%;
     text-decoration: none;
@@ -34,5 +36,5 @@ a{
 }
 
 .item_box:hover{
-    background-color: rgb(159, 247, 122)
+    background-color: rgb(159, 247, 122);
 }
