--- a/personal-web/src/page/ProductionPage/ProductionPage.css
+++ b/personal-web/src/page/ProductionPage/ProductionPage.css
@@ -12,3 +12,56 @@
     background-position-x: center;
     overflow: scroll;
 }
+
+#production-list{
+    position: relative;
+    border: solid 3px  rgb(135, 158, 31);
+    border-radius: 10px;
+    width: 75%;
+    height: auto;
+    min-height: 450px;
+    background-color: rgba(100, 100, 100, 0.7);
+    margin: 5% auto auto auto;
+}
+
+.production-img{
+    position: relative;
+    display: inline-block;
+    width: 25%;
+    margin-left: 6.25%;
+    margin-top: 50px;
+    height: 400px;
+}
+
+.production-name{
+    position: absolute;
+    height: 30%;
+    width: 100%;
+    bottom: 0;
+    color: white;
+    text-align: center;
+    font-size: 20px;
+}
+
+#production-controller{
+    position: fixed;
+    background-color: rgb(53, 53, 53);
+    width: 100%;
+    height: 150px;
+    bottom: 0;
+}
+
+.volum{
+    position: absolute;
+    height: 100px;
+    width: 100px;
+    background-color: red;
+}
+
+.musicControls{
+    position: absolute;
+    height: 100px;
+    width: 100px;
+    left: 200px;
+    background-color: red;
+}
