--- a/personal-web/src/page/ContactPage/ContactPage.css
+++ b/personal-web/src/page/ContactPage/ContactPage.css
@@ -26,5 +26,19 @@
 #contact-title{
     height: 20%;
     width: 100%;
-    background-color: red;
+    color: white;
+    text-align: center;
+    font-size: 100px;
+}
+
+#contact-info{
+    width: 80%;
+    margin: 5% auto auto 15%;
+
+}
+
+.contact-information{
+    font-size: 30px;
+    color: white;
+    tab-size: 2;
 }
