--- a/personal-web/src/page/ProductionPage/ProductionPage.css
+++ b/personal-web/src/page/ProductionPage/ProductionPage.css
@@ -34,10 +34,26 @@
 }
 
 .production-play{
+    position: relative;
+    margin: auto;
     display: none;
     width: 100%;
     height: 100%;
+    text-align: center;
     background-color: rgba(100, 100, 100, 0.7);
+}
+
+.play-bottom{
+    position: absolute;
+    width: 25%;
+    height: 25%;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.play-bottom:hover{
+    cursor: pointer;
 }
 
 .production-img:hover .production-play{
@@ -70,4 +86,30 @@
 }
 
 .musicControls{
+}
+
+#controller-img{
+    height: 100%;
+}
+
+#controller-play{
+    position:relative;
+    height: 100%;
+    width: 12%;
+    background-color: red;
+    margin-left: 2%;
+}
+
+#controller-play-bottom{
+    /* background-color: green; */
+    position: absolute;
+    width: 60%;
+    height: 60%;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+#controller-play-bottom:hover{
+    cursor: pointer;
 }
