--- a/personal-web/src/page/ScoringPage/ScoringPage.css
+++ b/personal-web/src/page/ScoringPage/ScoringPage.css
@@ -34,6 +34,33 @@
     height: 400px;
 }
 
+.scoring-play{
+    position: relative;
+    margin: auto;
+    display: none;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    background-color: rgba(100, 100, 100, 0.7);
+}
+
+.scoring-play-bottom{
+    position: absolute;
+    width: 25%;
+    height: 25%;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.scoring-img:hover .scoring-play{
+    display:block;
+}
+
+.scoring-play-bottom:hover{
+    cursor: pointer;
+}
+
 .scoring-name{
     position: absolute;
     height: 30%;
